--- a/danpq14.html
+++ b/danpq14.html
@@ -11,6 +11,9 @@
 <a href="https://www.facebook.com/nk.pzo">đây là facebook của tôi</a>
 <p>và đây là con trai tui
 </p>
+
+<p>xin chao va hen gap lai
+</p>
 <img src="https://scontent.fhan3-1.fna.fbcdn.net/v/t1.0-9/80337736_2590372034410456_4821883169592573952_n.jpg?_nc_cat=109&_nc_sid=85a577&_nc_ohc=9Dwu_Xr7YjYAX9O3YWN&_nc_ht=scontent.fhan3-1.fna&oh=a0be5518da1c90b6f2ac12d7f12db973&oe=5E805085" alt="">
 </body>
 </html>
