them anh Minh Khang khi con be

--- a/danpq14.html
+++ b/danpq14.html
@@ -14,6 +14,7 @@
 
 <p>xin chao va hen gap lai
 </p>
+<img src="https://scontent.fhan3-1.fna.fbcdn.net/v/t31.0-8/19250759_1345634648884207_5190243144482746343_o.jpg?_nc_cat=111&_nc_sid=dd9801&_nc_ohc=_h38UbQFVuAAX8xdHIg&_nc_ht=scontent.fhan3-1.fna&oh=b68928e38e43ad11480a9f720a27207f&oe=5E99A5A2" alt="">
 <img src="https://scontent.fhan3-1.fna.fbcdn.net/v/t1.0-9/80337736_2590372034410456_4821883169592573952_n.jpg?_nc_cat=109&_nc_sid=85a577&_nc_ohc=9Dwu_Xr7YjYAX9O3YWN&_nc_ht=scontent.fhan3-1.fna&oh=a0be5518da1c90b6f2ac12d7f12db973&oe=5E805085" alt="">
 </body>
 </html>
